@@ -1,3 +1,10 @@
+2018-08-23  Werner Lemberg  <wl@gnu.org>
+
+	[ftdiff] New keys `A' to `E' to select hinting mode directly.
+
+	* src/ftdiff.c (process_event): Handle keys `A' to `E'.
+	(event_help): Updated.
+
 2018-08-04  Werner Lemberg  <wl@gnu.org>
 
 	Fix clang warnings.
